--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="title" content="Hasan Wajahat">
     <meta name="description" content="Hasan Wajahat Web Developer App">
+    <meta name="google-site-verification" content="whAZl27SeWbUef0U0NgV3KHQAGe3ezVrJS2Ni5mhpoY" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
